# ReseauSecondSess

./: .gitignore  CMakeLists.txt  CreaBD_AIRPORT.sql  InserExamen.sql
Bagages/ClientMultiThread/nbproject/private/: private.properties  private.xml
Bagages/ClientMultiThread/src/clientpoolthreads/: Client.java
Bagages/RequeteReponseLUGAP/src/ProtocoleLUGAP/: RequeteLUGAP.java
Bagages/ServeurMultiThread/nbproject/private/: private.xml
Etape 6/: Commandes.txt  Requêtes_Check.txt  insert.sql
Etape 6/Application_Billets/: config.properties
Etape 6/Application_Billets/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Etape 6/Certificats/: certificat_applicationweb.cer  certificat_client.cer  certificat_serveur.cer  certificat_serveur_payment.cer  keystore_applicationweb  keystore_client  keystore_serveur  keystore_serveur_payment
Etape 6/DatabaseAccess/nbproject/: project.properties
Etape 6/ProtocolePAY/: build.xml
Etape 6/ProtocolePAY/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Etape 6/ProtocoleTICKMAP/: build.xml
Etape 6/ProtocoleTICKMAP/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Etape 6/RequeteReponseMultithread/nbproject/: project.properties
Etape 6/SSL/: Commandes.txt
Etape 6/SSL/Serveur_Mastercard/: config.properties
Etape 6/SSL/makecert/: .rnd  clientPayment.der
Etape 6/Serveur_Billets/: config.properties
Etape 6/Serveur_Billets/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Etape 6/Serveur_Payment/: config.properties
Etape 6/Serveur_Payment/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Etape 6/makecert/: ca.key  clientPayment.csr  client_payment_keystore  serverMastercard.csr  serverMastercard.der  server_mastercard_keystore
Etape 6/makecert/demoCA/: cacert.pem  index.txt
Etape 7/C++/: CMakeLists.txt  netstat + kill.txt
Etape 7/C++/CIMP/: CMakeLists.txt  RequestCIMP.cpp  RequestCIMP.h
Etape 7/C++/Socket/: CMakeLists.txt  ClientCheckIn.cpp  ServeurCheckIn.cpp  ServeurCheckIn.txt  SocketClient.cpp  SocketClient.h  SocketThreadServer.cpp  SocketThreadServer.h  SocketUtilities.cpp  SocketUtilities.h  States.h  logins.csv  tickets.csv
Etape 7/C++/Tests/: CMakeLists.txt  RequestCIMPTests.cpp  ServeurSocketTests.cpp  SocketUtilitiesTests.cpp  main.cpp
Etape 7/C++/libCSV/: CMakeLists.txt  CSV.cpp  CSV.h
Etape 7/C++/libConfig/: Config.cpp
Etape 7/Java/Application_AirTrafficControllers/: config.properties
Etape 7/Java/Application_Bagages/: config.properties
Etape 7/Java/CheckIn/: Application_CheckIn  Application_CheckIn.c  Application_CheckIn.h  Port.txt  Serveur_CheckIn  Serveur_CheckIn.c  Serveur_CheckIn.h  UtileCheckIn.c  UtileCheckIn.h  application_checkin.conf  makefile  serveur_checkin.conf
Etape 7/Java/ProtocoleACMAP/: build.xml
Etape 7/Java/Serveur_AirTrafficControllers/: config.properties
Etape 7/Java/Serveur_Bagages/: config.properties
Serveur/: CMakeLists.txt  Serveur.cpp  Serveur.h  Socket.cpp  Socket.h  SocketUtilities.cpp  SocketUtilities.h  main.cpp
ServeurCheckIn/: CMakeLists.txt
ServeurCheckIn/Serveur/: CMakeLists.txt  Serveur.cpp  Serveur.h  Socket.cpp  Socket.h
ServeurCheckIn/Tests/: CMakeLists.txt
ServeurCheckIn/Tests/ServeurTests/: SocketTests.cpp
Socket/: CMakeLists.txt  ClientCheckIn.cpp  ServeurCheckIn.cpp  ServeurCheckIn.txt  SocketClient.cpp  SocketClient.h  SocketServeur.cpp  SocketServeur.h  SocketThreadServer.cpp  SocketUtilities.cpp  SocketUtilities.h
Tests/: CMakeLists.txt  ServeurSocketTests.cpp  ServeurTests.cpp  SocketTests.cpp  SocketUtilitiesTests.cpp
libCSV/: CMakeLists.txt  CSVUtilities.cpp  CSVUtilities.h
libConfig/: CMakeLists.txt  Config.h
(+150 files in other folders)
